<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>benchmarks</groupId>
    <artifactId>bookkeeper-benchs</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>                
        <libs.bookkeeper>4.5.0-SNAPSHOT</libs.bookkeeper>
        <libs.herddb>0.1.0</libs.herddb>   
        <jetty.version>9.4.1.v20170120</jetty.version>
        <libs.jersey>2.26-b01</libs.jersey>             
        <libs.commonspool>2.4.2</libs.commonspool>
        <libs.curator>2.12.0</libs.curator>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.20</version>              
                <configuration>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds>                    
                    <argLine>-Xms2G -Xmx2G -Djava.io.tmpdir=${basedir}/target -XX:+UseG1GC -XX:+PrintGC -Xloggc:target/gc.log</argLine>
                </configuration>
            </plugin>           
        </plugins>
    </build>    
    <dependencies>
        <dependency>
            <groupId>org.apache.bookkeeper</groupId>
            <artifactId>bookkeeper-server</artifactId>
            <version>${libs.bookkeeper}</version>  
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>1.6.4</version>
        </dependency>  
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>annotations</artifactId>
            <version>3.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <repositories>
        <repository>
            <id>apache-snapshots</id>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>            
            <url>http://repository.apache.org/snapshots/</url>            
        </repository>
    </repositories>    
</project>
